# HireMatx

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 001_initial_schema.py
src/app/: __init__.py  config.py  main.py
src/app/api/: __init__.py  deps.py
src/app/api/routes/: applications.py  health.py  jobs.py  resumes.py  users.py
src/app/bot/: __init__.py  bot.py  keyboards.py  middlewares.py
src/app/bot/handlers/: applications.py  common.py  jobs.py  onboarding.py
src/app/database/: __init__.py  session.py
src/app/models/: __init__.py  application.py  base.py  job.py  resume.py  user.py
src/app/schemas/: __init__.py  application.py  job.py  resume.py  user.py
src/app/scrapers/: __init__.py  base.py  github_jobs.py  remoteok.py
src/app/services/: __init__.py  ai_service.py  application_service.py  job_service.py  resume_service.py  user_service.py
src/app/workers/: celery_app.py  tasks.py
tests/: __init__.py  conftest.py  test_api.py  test_job_service.py  test_user_service.py
